--- a/public/blogs/covid/index.html
+++ b/public/blogs/covid/index.html
@@ -78,7 +78,8 @@
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>#India Covid data</p>
+<div id="india-covid-data" class="section level1">
+<h1>India Covid data</h1>
 <p>We analyze the Covid testing and cases data for India.</p>
 <pre class="r"><code>statewise&lt;-vroom(&quot;C:/Users/Ishita Gupta/Desktop/covid/covid_19_india.csv&quot;)</code></pre>
 <pre><code>## Rows: 6,316
@@ -582,6 +583,7 @@ plot2</code></pre>
 ##  8 Bihar            4845770
 ##  9 Gujarat          4808691
 ## 10 Telengana        3987460</code></pre>
+</div>
 </div>
 </div>
 
