--- a/content/blogs/covid.html
+++ b/content/blogs/covid.html
@@ -14,7 +14,8 @@ categories:
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>#India Covid data</p>
+<div id="india-covid-data" class="section level1">
+<h1>India Covid data</h1>
 <p>We analyze the Covid testing and cases data for India.</p>
 <pre class="r"><code>statewise&lt;-vroom(&quot;C:/Users/Ishita Gupta/Desktop/covid/covid_19_india.csv&quot;)</code></pre>
 <pre><code>## Rows: 6,316
@@ -518,5 +519,6 @@ plot2</code></pre>
 ##  8 Bihar            4845770
 ##  9 Gujarat          4808691
 ## 10 Telengana        3987460</code></pre>
+</div>
 </div>
 </div>
